--- a/documents/refs.bib
+++ b/documents/refs.bib
@@ -1,3 +1,21 @@
+@article{anauati2016,
+  title = {Quantifying the {{Life Cycle}} of {{Scholarly Articles Across Fields}} of {{Economic Research}}},
+  author = {Anauati, María Victoria and Galiani, Sebastian and Gálvez, Ramiro H.},
+  date = {2016-04},
+  journaltitle = {Economic Inquiry},
+  shortjournal = {Economic Inquiry},
+  volume = {54},
+  number = {2},
+  pages = {1339--1355},
+  issn = {0095-2583, 1465-7295},
+  doi = {10.1111/ecin.12292},
+  url = {https://onlinelibrary.wiley.com/doi/10.1111/ecin.12292},
+  urldate = {2024-11-09},
+  abstract = {Does the life cycle of economic papers differ across fields of economic research? By constructing and analyzing a large dataset that combines information on 9,672 articles published in the top five economic journals from 1970 to 2000 with detailed yearly citation data obtained from Google Scholar, we find that published articles do have a life cycle that differs across fields of economic research (which we divide into the categories of applied, applied theory, econometric methods, and theory). Applied and applied theory papers are the clear winners in terms of citation counts. For the first years after their publication, they receive higher numbers of citations per year than papers in other fields of research do. They also reach a higher peak number of citations per year and apparently sustain those peak levels for longer, in addition to being cited over longer periods of time (i.e., they have a longer lifespan). Citation patterns are much less favorable for theoretical papers, which are the object of fewer citations per annum in the first years following publication, have lower peak numbers and a shorter lifespan. Econometric method papers are a special case; the pattern for most of these papers is similar to the pattern for theory papers, but the most successful papers (as measured by the number of citations) on econometric methods are also the most successful papers in the entire discipline of economics. (               JEL               A14)},
+  langid = {english},
+  file = {/Users/felixschmitz/Zotero/storage/QRRHJQ59/Anauati et al. - 2016 - QUANTIFYING THE LIFE CYCLE OF SCHOLARLY ARTICLES A.pdf}
+}
+
 @article{angrist2017,
   title = {Economic {{Research Evolves}}: {{Fields}} and {{Styles}}},
   shorttitle = {Economic {{Research Evolves}}},
@@ -17,6 +35,25 @@
   file = {/Users/felixschmitz/Zotero/storage/VNZIFFA9/Angrist et al. - 2017 - Economic Research Evolves Fields and Styles.pdf}
 }
 
+@article{angrist2020,
+  title = {Inside {{Job}} or {{Deep Impact}}? {{Extramural Citations}} and the {{Influence}} of {{Economic Scholarship}}},
+  shorttitle = {Inside {{Job}} or {{Deep Impact}}?},
+  author = {Angrist, Josh and Azoulay, Pierre and Ellison, Glenn and Hill, Ryan and Lu, Susan Feng},
+  date = {2020-03-01},
+  journaltitle = {Journal of Economic Literature},
+  shortjournal = {Journal of Economic Literature},
+  volume = {58},
+  number = {1},
+  pages = {3--52},
+  issn = {0022-0515},
+  doi = {10.1257/jel.20181508},
+  url = {https://pubs.aeaweb.org/doi/10.1257/jel.20181508},
+  urldate = {2024-11-09},
+  abstract = {Does academic economic research produce material of general scientific value, or do academic economists write only for peers? Is economics scholarship uniquely insular? We address these questions by quantifying interactions between economics and other disciplines. Changes in the influence of economic scholarship are measured here by the frequency with which other disciplines cite papers in economics journals. We document a clear rise in the extramural influence of economic research, while also showing that economics is increasingly likely to reference other social sciences. A breakdown of extramural citations by economics fields shows broad field influence. Differentiating between theoretical and empirical papers classified using machine learning, we see that much of the rise in economics’ extramural influence reflects growth in citations to empirical work. This growth parallels an increase in the share of empirical cites within economics. At the same time, some disciplines that primarily cite economic theory have also recently increased citations of economics scholarship. ( JEL A11, A14)},
+  langid = {english},
+  file = {/Users/felixschmitz/Zotero/storage/J52TM2EJ/Angrist et al. - 2020 - Inside Job or Deep Impact Extramural Citations an.pdf}
+}
+
 @article{blei2003,
   title = {Latent Dirichlet Allocation},
   author = {Blei, David M. and Ng, Andrew Y. and Jordan, Michael I.},
@@ -28,6 +65,23 @@
   abstract = {We describe latent Dirichlet allocation (LDA), a generative probabilistic model for collections of discrete data such as text corpora. LDA is a three-level hierarchical Bayesian model, in which each item of a collection is modeled as a finite mixture over an underlying set of topics. Each topic is, in turn, modeled as an infinite mixture over an underlying set of topic probabilities. In the context of text modeling, the topic probabilities provide an explicit representation of a document. We present efficient approximate inference techniques based on variational methods and an EM algorithm for empirical Bayes parameter estimation. We report results in document modeling, text classification, and collaborative filtering, comparing to a mixture of unigrams model and the probabilistic LSI model.},
   issue = {null},
   file = {/Users/felixschmitz/Zotero/storage/ZC2IJJPX/Blei et al. - 2003 - Latent dirichlet allocation.pdf}
+}
+
+@article{davis2019,
+  title = {Specialization, Fragmentation, and Pluralism in Economics},
+  author = {Davis, John B.},
+  date = {2019-03-04},
+  journaltitle = {The European Journal of the History of Economic Thought},
+  volume = {26},
+  number = {2},
+  pages = {271--293},
+  publisher = {Routledge},
+  issn = {0967-2567},
+  doi = {10.1080/09672567.2018.1555604},
+  url = {https://doi.org/10.1080/09672567.2018.1555604},
+  urldate = {2025-02-28},
+  abstract = {This paper investigates whether specialisation in research is causing economics to become an increasingly fragmented and diverse discipline with a continually rising number of niche-based research programmes and a declining role for dominant cross-science research programmes. It opens by framing the issue in terms of centrifugal and centripetal forces operating on research in economics, and then distinguishes descriptive from normative pluralism. It reviews recent research regarding the JEL code and economics’ J. B. Clark Award that points towards rising specialisation and fragmentation of research in economics. It then reviews five related arguments that might explain increasing specialisation and fragmentation in economics: (i) Smith’s early division of labour view, (ii) Kuhn’s later thinking about the importance of specialisation, (iii) Heiner’s behavioral burden of knowledge argument, (iv) Ross’s innovation-diffusion analysis and Arthur’s theory of technological change as determinants of specialisation in science, and (v) the effects of space and culture or internationalisation on innovation appropriation. The paper then discusses what descriptive pluralism implies about normative pluralism, and makes a case for multidisciplinarity over interdisciplinarity as a basis for arguments promoting pluralism. The paper closes with brief comments on the issue of specialisation and pluralism in the wider world outside economics and science.},
+  keywords = {fragmentation,innovation-diffusion,internationalisation,pluralism,Specialisation}
 }
 
 @online{galiani2023a,
@@ -115,6 +169,23 @@
   abstract = {We describe the evolution of subject areas published in economics over four decades and calculate the percentage of articles published in each Journal of Economic Literature (JEL) subject category, with and without weighting by Eigenfactor.com's Article Influence (AI). Finance, Development, and Industrial Organization have seen their share of total articles rise over the past four decades while Microeconomics, Macroeconomics, and Labor have seen their share fall. We use JEL codes to define specialty journals and find that more specialty journals tend to increase the overall percentage share for that subject. This effect is ambiguous when re-weighted by AI. (JEL A11, A14)},
   langid = {english},
   file = {/Users/felixschmitz/Zotero/storage/UKWQUL2Q/j.1465-7295.2010.00282.html}
+}
+
+@article{onder2021,
+  title = {Specialization, Field Distance, and Quality in Economists’ Collaborations},
+  author = {Önder, Ali Sina and Schweitzer, Sascha and Yilmazkuday, Hakan},
+  date = {2021-11-01},
+  journaltitle = {Journal of Informetrics},
+  shortjournal = {Journal of Informetrics},
+  volume = {15},
+  number = {4},
+  pages = {101222},
+  issn = {1751-1577},
+  doi = {10.1016/j.joi.2021.101222},
+  url = {https://www.sciencedirect.com/science/article/pii/S1751157721000936},
+  urldate = {2025-02-28},
+  abstract = {We analyze economics PhDs’ collaborations in peer-reviewed journals from 1990 to 2014 and investigate such collaborations’ quality in relation to each co-author’s research quality, field and specialization. We find that a greater overlap between co-authors’ previous research fields is significantly related to a greater publication success of co-authors’ joint work and this is robust to alternative specifications. Co-authors that engage in a distant collaboration are significantly more likely to have a large research overlap, but this significance is lost when co-authors’ social networks are accounted for. High quality collaboration is more likely to emerge as a result of an interaction between specialists and generalists with overlapping fields of expertise. Regarding interactions across subfields of economics (interdisciplinarity), it is more likely conducted by co-authors who already have interdisciplinary portfolios, than by co-authors who are specialized or starred in different subfields.},
+  keywords = {Collaboration,Research productivity,Specialization,Stratification,Team formation}
 }
 
 @article{rath2016,
