Finalize research proposal.

--- a/documents/refs.bib
+++ b/documents/refs.bib
@@ -84,6 +84,23 @@
   keywords = {fragmentation,innovation-diffusion,internationalisation,pluralism,Specialisation}
 }
 
+@article{fasani2020,
+  title = {The Economics of Migration: {{Labour}} Market Impacts and Migration Policies},
+  shorttitle = {The Economics of Migration},
+  author = {Fasani, Francesco and Llull, Joan and Tealdi, Cristina},
+  date = {2020-12-01},
+  journaltitle = {Labour Economics},
+  shortjournal = {Labour Economics},
+  volume = {67},
+  pages = {101929},
+  issn = {0927-5371},
+  doi = {10.1016/j.labeco.2020.101929},
+  url = {https://www.sciencedirect.com/science/article/pii/S0927537120301330},
+  urldate = {2025-02-28},
+  abstract = {This article introduces the Special Issue on “The Economics of Migration: Labour Market Impacts and Migration Policies”. In the paper, we summarize the selection of articles published in the Special Issue and place their contributions in the context of the main developments in this field. We have organized the articles into three broad thematic areas. The first set of papers provides novel evidence on migrant selection. The following group of articles delves into the core literature of the labour market impacts of immigration, with a particular focus on high-skilled immigration and selective immigration policies. A final group of papers deals with more specific - and often controversial – topics: refugee migration, undocumented migration and the political consequences of migrant flows. In the concluding remarks, we extract from the different papers some guidance for future migration policies.},
+  file = {/Users/felixschmitz/Zotero/storage/PUUD4K4Y/Fasani et al. - 2020 - The economics of migration Labour market impacts .pdf}
+}
+
 @online{galiani2023a,
   type = {Working Paper},
   title = {Specialization {{Trends}} in {{Economics Research}}: {{A Large-Scale Study Using Natural Language Processing}} and {{Citation Analysis}}},
@@ -154,6 +171,15 @@
   langid = {english}
 }
 
+@book{institutfurarbeitsrechtundarbeitsbeziehungenindereuropaischenunioniaaeuuniversitattrier2001,
+  title = {Employment-Related {{Collective Bargaining}} in {{Germany}}: {{Annual Report}} 2001},
+  shorttitle = {Employment-Related {{Collective Bargaining}} in {{Germany}}},
+  author = {Institut für Arbeitsrecht und Arbeitsbeziehungen in der Europäischen Union (IAAEU), Universität Trier and Sadowski, Dieter and Ludewig, Oliver and Turk, Florian},
+  date = {2001-01},
+  series = {{{IAAEG Discussion Papers}} until 2011},
+  file = {/Users/felixschmitz/Zotero/storage/2KUZP5KR/10005463777.html}
+}
+
 @article{kelly2011,
   title = {Trend of {{Subjects Published}} in {{Economics Journals}} 1969–2007},
   author = {Kelly, Michael A. and Bruestle, Stephen},
@@ -204,4 +230,31 @@
   abstract = {This article updates Kelly and Bruestle (2011) by illustrating how publication trends in different subject categories in economics evolved from 2007 to 2013. Using data from RePEc we show that the largest increase in the relative share was for articles published in JEL category Q (“Agricultural and Natural Resource Economics, Environmental and Ecological Economics”) over this period. Furthermore, we provide evidence that the number of JEL categories per article increased over the last 25 years.},
   langid = {english},
   file = {/Users/felixschmitz/Zotero/storage/YIN8AJR5/Rath and Wohlrabe - 2016 - Trends in economics publications represented by JE.pdf}
+}
+
+@inproceedings{rehurek2010,
+  title = {Software {{Framework}} for {{Topic Modelling}} with {{Large Corpora}}},
+  author = {Rehurek, Radim and Sojka, Petr},
+  date = {2010-05-22},
+  url = {https://www.semanticscholar.org/paper/Software-Framework-for-Topic-Modelling-with-Large-Rehurek-Sojka/83a6cacc126d85c45605797406262677c256a6af},
+  urldate = {2024-11-09},
+  abstract = {Large corpora are ubiquitous in today's world and memory quickly becomes the limiting factor in practical applications of the Vector Space Model (VSM). We identify gap in existing VSM implementations, which is their scalability and ease of use. We describe a Natural Language Processing software framework which is based on the idea of document streaming, i.e. processing corpora document after document, in a memory independent fashion. In this framework, we implement several popular algorithms for topical inference, including Latent Semantic Analysis and Latent Dirichlet Allocation, in a way that makes them completely independent of the training corpus size. Particular emphasis is placed on straightforward and intuitive framework design, so that modifications and extensions of the methods and/or their application by interested practitioners are effortless. We demonstrate the usefulness of our approach on a real-world scenario of computing document similarities within an existing digital library DML-CZ.},
+  file = {/Users/felixschmitz/Zotero/storage/QNE6CN4M/Rehurek and Sojka - 2010 - Software Framework for Topic Modelling with Large .pdf}
+}
+
+@inproceedings{yang2013,
+  title = {Overlapping Community Detection at Scale: A Nonnegative Matrix Factorization Approach},
+  shorttitle = {Overlapping Community Detection at Scale},
+  booktitle = {Proceedings of the Sixth {{ACM}} International Conference on {{Web}} Search and Data Mining},
+  author = {Yang, Jaewon and Leskovec, Jure},
+  date = {2013-02-04},
+  series = {{{WSDM}} '13},
+  pages = {587--596},
+  publisher = {Association for Computing Machinery},
+  location = {New York, NY, USA},
+  doi = {10.1145/2433396.2433471},
+  url = {https://doi.org/10.1145/2433396.2433471},
+  urldate = {2025-02-28},
+  abstract = {Network communities represent basic structures for understanding the organization of real-world networks. A community (also referred to as a module or a cluster) is typically thought of as a group of nodes with more connections amongst its members than between its members and the remainder of the network. Communities in networks also overlap as nodes belong to multiple clusters at once. Due to the difficulties in evaluating the detected communities and the lack of scalable algorithms, the task of overlapping community detection in large networks largely remains an open problem.In this paper we present BIGCLAM (Cluster Affiliation Model for Big Networks), an overlapping community detection method that scales to large networks of millions of nodes and edges. We build on a novel observation that overlaps between communities are densely connected. This is in sharp contrast with present community detection methods which implicitly assume that overlaps between communities are sparsely connected and thus cannot properly extract overlapping communities in networks. In this paper, we develop a model-based community detection algorithm that can detect densely overlapping, hierarchically nested as well as non-overlapping communities in massive networks. We evaluate our algorithm on 6 large social, collaboration and information networks with ground-truth community information. Experiments show state of the art performance both in terms of the quality of detected communities as well as in speed and scalability of our algorithm.},
+  isbn = {978-1-4503-1869-3}
 }
