--- a/documents/paper.tex
+++ b/documents/paper.tex
@@ -63,16 +63,16 @@ This paper proposes research to investigate specialization trends within economi
 Understanding these trends is crucial as increasing specialization can influence knowledge dissemination, collaboration patterns, and the evolution of economic thought.
 
 To analyze specialization, a robust measure is required.
-The focus will be on leveraging Journal of Economic Literature (JEL) Codes, which are widely used by economists to classify research.
-These codes provide a structured way to categorize papers into subfields, allowing for a systematic analysis of specialization trends.
-The JEL Codes are assigned by authors or editors and are intended to reflect the main topics of a paper.
+Leveraging Journal of Economic Literature (JEL) Codes, which are widely used by economists to classify research, will be the aim of this research.
+JEL Codes provide a structured way to categorize papers into subfields, allowing for a systematic analysis of specialization trends.
+These are assigned by authors or editors and are intended to reflect the main topics of a paper.
 While they do not cover the methods or data used in a paper, they provide a useful starting point for understanding the content of a paper, and hence of economic research in aggregate.
 By examining the intersections of JEL Codes across papers, this study assesses the depth and diversity of specialization within economics research.
 
 This research also aims to validate the relevance of JEL Codes as a tool for analyzing specialization trends.
 Additionally, as an empirical application, the goal is to explore specialization dynamics within the subfield of Labor Economics, providing a focused example of how specialization may evolve over time.
-Through this approach, the study contributes to a better understanding of how economic research is structured and how subfields are connected or fragmented (e.g. \citep{davis2019}).
-The findings may have implications for how economists engage in interdisciplinary work and how academic communities organize knowledge.
+Through this approach, the study contributes to a better understanding of how economic research is structured and how subfields are connected or fragmented (see e.g. \citet{davis2019}).
+Findings may have implications for how economists engage in interdisciplinary work and how academic communities organize knowledge.
 
 The following sections of this research proposal are structured as follows.
 First, the literature review provides a brief overview of the existing research on specialization trends in economics and the use of JEL Codes.
@@ -85,18 +85,18 @@ It also outlines the next steps for the analysis and the expected contributions 
 \section{Literature Review}
 The literature on specialization trends in economics research is limited, with few studies focusing on the evolution of subfields within the discipline.
 \citet{onder2021} analyze the specialization trends of authors and co-authors in economics research, and the resulting impact on research output.
-They find that eventhough specialization of authors is increasing, the publication by them into highly ranked journals is decreasing.
+They find that even though specialization of authors is increasing, the publication by them into highly ranked journals is decreasing.
 Recent advances in text data analysis have opened up new possibilities for studying specialization trends \citep{anauati2016, angrist2017, angrist2020, galiani2023a}.
 These facilitate natural language processing techniques to assign specific field of economics research tags.
 The analysis then is based upon these tags to identify specialization trends on the distinction of theoretical vs. empirical developments.
 The tags not only contain information on the topics covered, but also the approach and methods used in the research.
-\citet{heikkila2022a} investigates the use of JEL codes in economics research, and their development over time.
-The study finds that JEL codes are widely used to classify research in economics, and highlights the potential for "bibliometric and scientometric research" using these codes.
+\citet{heikkila2022a} investigates the use of JEL Codes in economics research, and their development over time.
+The study finds that JEL Codes are widely used to classify research in economics, and highlights the potential for "bibliometric and scientometric research" using these Codes.
 In addition, the research shows that classification scheme of JEL Codes remained basically unchanged since a large revision in 1991.
 There is further research on the classification of research papers in economics between human and machine classification \citep{heikkila2024}.
 Generating (artificial) JEL Codes from abstracts using large language models is the focus here.
 There is relevant research on the trends of JEL Codes used in economics research \citep{kelly2011}.
-The authors analyze the publication by subfields, the development of JEL Codes, and define specialty journals using JEL codes.
+The authors analyze the publication by subfields, the development of JEL Codes, and define specialty journals using JEL Codes.
 \citet{rath2016} extend this research focusing on the distribution of JEL Codes in economics research per subfield.
 Further, there is a growing interest in understanding how knowledge is structured and how research communities are organized.
 
@@ -111,7 +111,7 @@ The series has been initialized in April 1998 and has been continuously publishe
 The data includes the JEL Codes, the name of the authors, the abstract and the publication date of the discussion paper, among others.
 
 For a future project, it would be interesting to extend the analysis to other working paper series or general economics journals.
-A dataset that might be easily available for analysis is a combination of Constellate, Semantic Scholar, and manually classified publications into subfields of economics research, as produced by \cite{galiani2023a}.
+A dataset that might be easily available for analysis is a combination of Constellate, Semantic Scholar, and manually classified publications into subfields of economics research, as produced by \citet{galiani2023a}.
 This dataset would provide a more comprehensive view of specialization trends in economics research, and would allow to join the work with .
 
 \subsection{Data Collection}
@@ -154,8 +154,8 @@ Deviations from the expected format of alphanumeric characters, beginning with a
 There were about 45 discussion papers that needed manual attention to fix the extracted JEL Codes.
 In addition, the following algorithmic methods were used to clean the JEL Codes.
 The letters were converted to uppercase, leading '1' and '0' were replaced by 'I' and 'O', respectively.
-This confusion is likely due to the extraction of the JEL Codes via Optical Character Recognition (OCR) from the PDFs.
-After these thoroughly cleaning steps, JEL Codes not starting with a capital letter followed followed by at least one and at most two digits were dropped.
+This confusion is likely due to the extraction of the JEL Codes via Optical Character Recognition from the files.
+After these thoroughly cleaning steps, JEL Codes not starting with a capital letter followed by at least one and at most two digits were dropped.
 Finally, JEL Codes with a single digit were converted to two digits by adding a trailing zero.
 Overall, one discussion paper each was dropped with the JEL Codes "workfromhomecommutetimesallocationoftimesavingsCOVID19" (15870), and
 "labordisplacementenergytransitioncoalmines" (15581).
@@ -163,7 +163,7 @@ Further, 16 discussion papers were dropped due to completely missing JEL Codes. 
 
 In a last step, the dataset was limited to discussion papers with an inclusive publication date between January 2000 and December 2024.
 This is mainly to ensure a sufficient number of observations per month (for the early years) and complete information on the discussion paper (for the most recent discussion papers).
-This reduces the sample size by 195 observations. The final number of discussion papers analysed is 17,449.
+This reduces the sample size by 195 observations. The final number of discussion papers analyzed is 17,449.
 
 \subsection{Descriptive Statistics}
 To get an overview of the data, the following descriptive statistics are presented.
@@ -174,29 +174,32 @@ The average number of JEL Codes per discussion paper on the other hand is rather
 
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{../bld/figures/fig_dp_counts}
+    \includegraphics[width=0.8\textwidth]{../bld/figures/fig_dp_counts}
     \caption{Number of Discussion Papers \& JEL Codes per Discussion Paper}
     \label{fig:dp_counts}
 \end{figure}
 
+In Figure \ref{fig:top5overall_jel}, the overall top 5 JEL Codes are shown as the normalized number of appearance per month and over the smoothed 6-month-period.
+The normalization is done by dividing the number of discussion papers with a JEL Code by the total number of discussion papers in the respective month.
+The smoothing is done by taking the average of a rolling window of 6 months.
+A spike in the normalized frequency of the JEL Code 'J31' (Wage Level and Structure, Wage Differentials) is likely related to an employment-related collective bargaining in Germany \citep{institutfurarbeitsrechtundarbeitsbeziehungenindereuropaischenunioniaaeuuniversitattrier2001}, when the discussion paper series was still young, and likely used frequently by German authors.
+After this event, the frequency of the JEL Code 'J31' decreased again, and almost vanishes over time.
+This is contrasted to JEL Codes 'J16' (Economics of Gender, Non-labor Discrimination) and 'J24' (Human Capital, Skills, Occupational Choice, Labor Productivity), which gained substantially in frequency over time.
+
+\begin{figure}[htbp!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{../bld/figures/fig_top5overall_jel}
+    \caption{Top 5 JEL Codes}
+    \label{fig:top5overall_jel}
+\end{figure}
+
 \section{Methodology}
-The methodologies presented here are used to achieve two main objectives.
-First, the behavior of subfields over time is to be analyzed.
-Second, the text data methods, such as topic modeling using Latent Dirichlet Allocation (LDA), are used to validate the JEL Codes as a tool for analyzing specialization trends.
+The methodology for analyzing specialization trends in economics research is based on two main approaches: topic modeling and network analysis.
+These methods are used to identify thematic structures within the corpus of discussion papers and JEL Codes assigned to analyze specialization trends.
 
 \subsection{Topic Modeling}
-To analyze the specialization trends in economics research, topic modeling is used.
-Specifically, the LDA algorithm is used to identify topics in the abstracts of the discussion papers \cite{blei2003}.
-To prepare the abstract data for the LDA model, the text is lowercased, tokenized, and stemmed.
-Numbers, punctuation, and words containing no alphanumeric characters are removed.
-Furthermore, stopwords are removed from the text.
-The model
-The number of topics is set to 750 and 20 passes through the corpus of tokenized and stemmed abstracts are performed during training of the model, similar to \cite{galiani2023a}.
-
-\subsection{Topic Modeling}
-
 To analyze specialization trends in economics research, topic modeling is employed to identify latent topics within the abstracts of discussion papers.
-Specifically, the Latent Dirichlet Allocation (LDA) generative model is used, which assumes that documents discussing similar topics tend to use similar groups of words \cite{blei2003}.
+Specifically, the Latent Dirichlet Allocation (LDA) generative model is used, which assumes that documents discussing similar topics tend to use similar groups of words \citep{blei2003}.
 LDA is particularly suitable for this analysis as it captures co-occurring word clusters, revealing thematic structures within the corpus.
 This approach models documents as random mixtures over latent topics, where each topic is characterized by a distribution over words.
 
@@ -206,63 +209,55 @@ Tokenization is then performed, splitting the text into individual words.
 Stemming is applied to reduce words to their root form, capturing the core meaning of words (e.g., replacing "running" with "run").
 Additionally, numbers, punctuation, and tokens without alphanumeric characters are removed.
 Stopwords, which are common function words with little semantic value, are also eliminated.
+A corpus of words is then created, and words that appear in less than 20 documents and words that appear in more than 90\% of documents are removed.
+This corpus is then transformed into a document-term matrix, where each row represents a document and each column a word.
 These preprocessing steps collectively improve the quality of the tokenized text, ensuring a more effective training process for the LDA model.
 
-The LDA model is trained using \texttt{Gensim}'s implementation of the LDA training algorithm
-%\cite{rehurek2010}.
+The LDA model is trained using \texttt{Gensim}'s implementation of the LDA training algorithm \citep{rehurek2010}.
 The number of topics is set to 750, and the model is trained using 20 passes through the corpus.
-These settings are chosen to ensure sufficient topic granularity while maintaining interpretability, similar to the approach used in \cite{galiani2023a}.
+These settings are chosen to ensure sufficient topic granularity while maintaining interpretability, similar to the model specifications used in \citet{galiani2023a}.
 
-% is this true?
-The model uses a symmetric Dirichlet prior for the topic distribution per document ($\alpha$) and the word distribution per topic ($\eta$), reflecting the assumption that all topics and words are equally likely a priori.
-
-Two main outputs are obtained from the trained LDA model. First, the word distribution over topics, denoted as $w_{k,l}$, represents the probability of word $l$ in topic $k$, with $\sum_l w_{k,l} = 1$.
+Two main outputs are obtained from the trained LDA model.
+First, the word distribution over topics, denoted as $w_{k,l}$, represents the probability of word $l$ in topic $k$, with $\sum_l w_{k,l} = 1$.
 This indicates the contribution of each word to the topic.
 Second, the topic distribution over documents, denoted as $t_{i,k}$, captures the presence of topic $k$ in document $i$, with $\sum_k t_{i,k} = 1$.
 This shows the relevance of each topic within the document.
 
-To ensure the meaningfulness of the detected topics, a filtering process is applied.
-Topics predominantly composed of non-thematic words (e.g., "online", "access", "appendix") or those lacking a clear thematic pattern are excluded.
-% After this filtering process, 695 meaningful topics are retained.
-An article $i$ is defined as "containing" topic $k$ if $t_{i,k}$ ranks among the top ten topics with the highest presence in that article.
-This approach ensures consistent topic assignment while maintaining interpretability.
-
-This topic modeling approach not only identifies prevalent themes but also captures the interconnectedness of topics within the field.
-It provides a robust foundation for analyzing specialization trends in economics research by revealing how topics cluster and evolve over time.
-The results from this robust methodology offer a comprehensive benchmark for understanding the dynamics of specialization within the field when using JEL codes.
-
 In Figure \ref{fig:top5_increasing_decreasing_topics}, the top 5 topics increasing and decreasing in presence are shown.
+The left column contains topics with the highest increase in presence, while the right column contains topics with the lowest increase in presence (highest decrease in presence).
+Plots are sorted in each column from by the value of the increase in presence, hence the topic with the highest increase in presence is shown in the left column and first row, and the most decreasing topic in right column and fifth row.
 
-
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{../bld/figures/fig_topic_trends}
     \caption{Top 5 Topics Increasing (Left) and Decreasing (Right) in Presence}
     \label{fig:top5_increasing_decreasing_topics}
 \end{figure}
 
-\subsection{JEL Code Analysis}
+The most increasing topic contains stemmed words such as ("student", "academ"), making it related to research in education.
+The third most increasing topic contains stemmed words such as ("gender", "gap"), indicating research focusing on discrepancies between genders.
+The most decreasing topic contains stemmed words such as ("wage", "increas", higher"), indicating research on wage increases.
 
-\begin{figure}
-    \centering
-    \includegraphics[width=\textwidth]{../bld/figures/fig_top5overall_jel}
-    \caption{Top 5 JEL Codes}
-    \label{fig:top5overall_jel}
-\end{figure}
+This topic modeling approach not only identifies prevalent themes but also captures the interconnectedness of topics within the field.
+It provides a robust foundation for analyzing specialization trends in economics research by revealing how topics cluster and evolve over time.
+The results from this robust methodology offer a comprehensive benchmark for understanding the dynamics of specialization within the field and will be linked with the results from network analysis based on JEL Codes.
 
 \subsection{Overlapping Network Analysis}
-Initially, I wanted to use the Louvain algorithm to detect communities in the network.
-However, the algorithm only allows to non-overlapping communities, that is, a node can only belong to one community.
+Initially, the method selected to use was the Louvain algorithm to detect communities in the network.
+There, a network of nodes (unique JEL Codes) and edges (co-occurrence of JEL Codes in discussion papers) is created, and the algorithm is applied to dissect the network into non-overlapping communities.
+That is, a node can only belong to one community.
 This is not suitable for the analysis of specialization trends in economics research, as a JEL code can belong to multiple subfields.
-Rather the combination of JEL codes describes a subfield.
-Subsets of JEL codes describing a subfield might overlap with JEL codes describing another subfields.
-Hence, the goal is to use a different algorithm to detect overlapping communities in the network.
+Figure \ref{fig:top5overall_jel} supports this argument, as the JEL Code 'J61' (Geographic Labor Mobility, Immigrant Workers) is not perceived to undergo a relevant increase in presence, yet the topic is of high interest in the field of Labor Economics \citep{fasani2020}.
+Unique JEL Codes might be shared between subfields, and hence the communities are overlapping.
+This combination of JEL Codes then describes a subfield.
+Hence, the goal is to use an algorithm able to detect overlapping communities in the network, such as described in \citet{yang2013}.
 
 \section{Conclusion}
-In a next step, the self-assigned keywords of the discussion papers can be used for comparison with the results from the topic modeling and JEL Code analysis.
-Further, the content of the files can be used to create artificial JEL Codes as in \citet{heikkila2024} or to create fields of economics research tags as shown by \citet{anauati2016, galiani2023a}.
-Leveraging the data from \citet{anauati2016, galiani2023a} would also allow to expand the analysis into other subfields of economics research, and to combine the JEL Code analysis with citation data.
-This would allow to understand how specialization trends in economics research are related to citation patterns and the dissemination of knowledge for specific topics.
+This research examines specialization trends within economics using JEL Codes, employing topic modeling and network analysis to identify thematic structures and specialization dynamics. The findings provide insights into how economic research is structured and how subfields are interconnected or fragmented.
+Next steps involve comparing self-assigned keywords with results from topic modeling and JEL Code analysis. Additionally, the content of the files can be used to generate artificial JEL Codes \citep{heikkila2024} or to create research tags following methods by \citet{anauati2016, galiani2023a}.
+Expanding the analysis with data from \citet{anauati2016, galiani2023a} would enable exploration of other subfields and integration with citation data. This would enhance understanding of how specialization trends relate to citation patterns and knowledge dissemination within economic research.
+Through these extensions, the study aims to provide valuable perspectives on the evolution of economic specialization and its implications for interdisciplinary collaboration and knowledge organization.
+\clearpage
 
 \printbibliography
 
@@ -274,34 +269,34 @@ There are few authors that have published a large number of discussion papers.
 Similarly, there are few JEL Codes that are assigned to a large number of discussion papers.
 The Figure \ref{fig:counts_dp_jel_codes} shows the distribution of discussion papers by author on the left and by JEL Codes on the right.
 
-\begin{figure}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{../bld/figures/fig_counts_dp_jel_codes}
+    \includegraphics[width=0.8\textwidth]{../bld/figures/fig_counts_dp_jel_codes}
     \caption{Discussion Papers by Author \& Discussion Papers by JEL Codes}
     \label{fig:counts_dp_jel_codes}
 \end{figure}
 
-Relevant to note is, that the structure of the authors publishing discussion papers has changed over time.
+It is relevant to note that the structure of the authors publishing discussion papers has changed over time.
 The average number of authors per discussion paper per month has increased by about 0.5 authors per discussion paper.
 Furthermore, the average new number of new authors per discussion paper per month is stable around 0.5 authors per discussion paper, while the average number of authors that have published before is increasing by about 1.5 authors per discussion paper per month.
 This fact can be related to the establishment of the discussion series as a well-known platform for research in Labor Economics.
 These trends are shown in Figure \ref{fig:author_trends}.
 
-\begin{figure}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{../bld/figures/fig_author_trends}
+    \includegraphics[width=0.8\textwidth]{../bld/figures/fig_author_trends}
     \caption{Average Number of Authors Over Time}
     \label{fig:author_trends}
 \end{figure}
 
-In Figure \ref{fig:top3yearl_jel}, all JEL Codes are shown that are at least in one year among the top 3 JEL Codes.
+In Figure \ref{fig:top3yearly_jel}, all JEL Codes are shown that are at least in one year among the top 3 JEL Codes.
 If the JEL Code is not among the top 3 JEL Codes for a specific year in the plot, the opacity of the line is reduced.
 The JEL Codes 'J24' (Human Capital, Skills, Occupational Choice, Labor Productivity) and 'J31' (Wage Level and Structure, Wage Differentials) are consistently among the top 3 JEL Codes.
 While other JEL Codes like 'J16' (Economics of Gender, Non-labor Discrimination) saw a relative frequency increase lately.
 
-\begin{figure}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{../bld/figures/fig_top3yearly_jel}
+    \includegraphics[width=0.8\textwidth]{../bld/figures/fig_top3yearly_jel}
     \caption{Top 3 JEL Codes yearly}
     \label{fig:top3yearly_jel}
 \end{figure}
